--- a/src/body/app.css
+++ b/src/body/app.css
@@ -6,3 +6,13 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
+
+.see{
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
+.see2{
+    clip-path: polygon(50% 0%, 100% 0, 100% 50%);
+}
